--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,13 +16,21 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
+    
     - name: Install dependencies
       run: |
         pip install -r requirements.txt
+
+    - name: Disable audio for headless environment
+      if: matrix.os == 'ubuntu-latest'
+      run: |
+        export CI=true
+        
     - name: Test with pytest
       run: |
         pytest
